Causeview Package Complete/ant script/retrieveUnpackaged/objects/WidgetForms__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used to define Custom Actionforms on the AP Designer</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Actionform</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FormId__c</fullName>
        <inlineHelpText>The ID of the form published in GP Server to be used.</inlineHelpText>
        <label>Form Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Actionforms</label>
</CustomObject>